init log
